--- a/trunk/mscore/mscore/playpanel.ui
+++ b/trunk/mscore/mscore/playpanel.ui
@@ -145,7 +145,7 @@
           <item>
            <widget class="QLabel" name="tempoLabel">
             <property name="sizePolicy">
-             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
               <horstretch>0</horstretch>
               <verstretch>0</verstretch>
              </sizepolicy>
@@ -644,7 +644,7 @@
              <enum>Qt::PlainText</enum>
             </property>
             <property name="alignment">
-             <set>Qt::AlignVCenter</set>
+             <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
             </property>
             <property name="margin">
              <number>0</number>
@@ -660,7 +660,7 @@
           <item>
            <widget class="QLabel" name="relTempo">
             <property name="sizePolicy">
-             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
               <horstretch>0</horstretch>
               <verstretch>0</verstretch>
              </sizepolicy>
@@ -1150,7 +1150,7 @@
              <enum>Qt::PlainText</enum>
             </property>
             <property name="alignment">
-             <set>Qt::AlignVCenter</set>
+             <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
             </property>
             <property name="margin">
              <number>0</number>
